[gd_scene load_steps=22 format=3 uid="uid://bodccpgndfve4"]

[ext_resource type="Texture2D" uid="uid://tykvcmgn3xm5" path="res://Sprites/SwampLevel1/Froggy/Froggy_character/Froggy_2.png" id="1_2ca6i"]
[ext_resource type="Script" path="res://Scene/Swamp_Level_1/Froggy/Froggy_in_spikes.gd" id="1_ivwkf"]
[ext_resource type="Texture2D" uid="uid://dlh2tcnryvtjs" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_1.png" id="3_0ukg1"]
[ext_resource type="Texture2D" uid="uid://cvrgwxdktkf1h" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_2.png" id="4_af3vi"]
[ext_resource type="Texture2D" uid="uid://b5nh3ibuugws0" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_3.png" id="5_1mfh8"]
[ext_resource type="Texture2D" uid="uid://jbsgnta02uhd" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_4.png" id="6_4vcg0"]
[ext_resource type="Texture2D" uid="uid://bjx67gq5ge332" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_5.png" id="7_d80kg"]
[ext_resource type="Texture2D" uid="uid://b0wvdjpiayel6" path="res://Sprites/SwampLevel1/Froggy/Froggy_character/Froggy_1.png" id="8_o1td1"]
[ext_resource type="Texture2D" uid="uid://c0upsyb28rs0u" path="res://Sprites/SwampLevel1/Froggy/Froggy_jump_6.png" id="8_tub7b"]
[ext_resource type="Texture2D" uid="uid://bs4s74wtgffl2" path="res://Sprites/SwampLevel1/Froggy/Froggy_character/Froggy_3.png" id="9_jtnu5"]
[ext_resource type="Texture2D" uid="uid://ddrifgpg35uy5" path="res://Sprites/SwampLevel1/Froggy/Froggy_character/Froggy_4.png" id="10_0c0hg"]
[ext_resource type="Texture2D" uid="uid://dk3xa37ykue2f" path="res://Sprites/SwampLevel1/Froggy/Froggy_character/Froggy_cry_5.png" id="11_eiwfj"]
[ext_resource type="Texture2D" uid="uid://c5g8q55wmkems" path="res://Sprites/SwampLevel1/Items/Glass_spikes/Spike_glass_1.png" id="12_61gfl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rupw5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("3_0ukg1")
}, {
"duration": 1.0,
"texture": ExtResource("4_af3vi")
}, {
"duration": 1.0,
"texture": ExtResource("5_1mfh8")
}, {
"duration": 1.0,
"texture": ExtResource("6_4vcg0")
}, {
"duration": 1.0,
"texture": ExtResource("7_d80kg")
}, {
"duration": 1.0,
"texture": ExtResource("8_tub7b")
}, {
"duration": 1.0,
"texture": ExtResource("4_af3vi")
}, {
"duration": 1.0,
"texture": ExtResource("5_1mfh8")
}, {
"duration": 1.0,
"texture": ExtResource("6_4vcg0")
}, {
"duration": 1.0,
"texture": ExtResource("7_d80kg")
}, {
"duration": 1.0,
"texture": ExtResource("8_tub7b")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}],
"loop": true,
"name": &"Idle",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}, {
"duration": 1.0,
"texture": ExtResource("8_o1td1")
}, {
"duration": 1.0,
"texture": ExtResource("9_jtnu5")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("10_0c0hg")
}, {
"duration": 1.0,
"texture": ExtResource("11_eiwfj")
}, {
"duration": 1.0,
"texture": ExtResource("11_eiwfj")
}, {
"duration": 1.0,
"texture": ExtResource("11_eiwfj")
}, {
"duration": 1.0,
"texture": ExtResource("11_eiwfj")
}, {
"duration": 1.0,
"texture": ExtResource("1_2ca6i")
}],
"loop": false,
"name": &"Saddy",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d7rr"]
size = Vector2(240, 121)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yoqu0"]
load_path = "res://.godot/imported/Take_item_emotion.png-54adb9fcabce9082dcdb6639a63bc984.ctex"

[sub_resource type="Animation" id="Animation_5vrb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.07, 0.07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_w2y5s"]
resource_name = "emotion"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(0.07, 0.07), Vector2(0.09, 0.09), Vector2(0.07, 0.07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6135b"]
_data = {
"RESET": SubResource("Animation_5vrb6"),
"emotion": SubResource("Animation_w2y5s")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1sbnb"]
radius = 39.982
height = 189.981

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sqj77"]
radius = 19.5
height = 193.0

[node name="Froggy_in_spikes" type="Area2D" groups=["Froggy_in_spikes"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ivwkf")

[node name="Froggy_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(39.998, -22)
scale = Vector2(0.09, 0.09)
sprite_frames = SubResource("SpriteFrames_rupw5")
animation = &"Saddy"
autoplay = "Idle"

[node name="SpikeGlass_Froggy" type="Sprite2D" parent="Froggy_sprite"]
modulate = Color(0.4, 0.466667, 0.270588, 1)
position = Vector2(-499.984, 211.111)
scale = Vector2(11.1111, 11.1111)
texture = ExtResource("12_61gfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-25, -20.5)
shape = SubResource("RectangleShape2D_1d7rr")
debug_color = Color(0, 0.137255, 0.168627, 0.317647)

[node name="TakeItemEmotion" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.662745)
position = Vector2(83, -61)
rotation = 0.18495
scale = Vector2(0.07, 0.07)
texture = SubResource("CompressedTexture2D_yoqu0")

[node name="Animation_emotion" type="AnimationPlayer" parent="TakeItemEmotion"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6135b")
}

[node name="play_game" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="play_game"]
position = Vector2(5, -15)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_1sbnb")
debug_color = Color(0.694118, 0.466667, 0.462745, 0.419608)

[node name="Glasse_spikes" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Glasse_spikes"]
position = Vector2(-7.5, 7.5)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_sqj77")
debug_color = Color(0.843137, 0.360784, 0.337255, 0.419608)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="play_game" to="." method="_on_play_game_body_entered"]
[connection signal="body_entered" from="Glasse_spikes" to="." method="_on_glasse_spikes_body_entered"]
